// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Long thread 1`] = `
<div
  class="w-1/3 m-auto h-400px"
>
  <div
    class="discussion"
  >
    <div
      class="messages"
    >
      <span
        class="from"
      >
        Fernand Naudin
      </span>
      <span
        class="message"
      >
        Qu'est-ce qui se passe encore ?
      </span>
      <span
        class="from"
      >
        Maître Folage
      </span>
      <span
        class="message"
      >
        Notre ami va se faire un plaisir de vous l'expliquer.
      </span>
      <span
        class="from"
      >
        Pascal
      </span>
      <span
        class="message"
      >
        Les Volfoni ont organisé à la péniche une petite réunion des cadres, façon meeting, si vous voyez ce que je veux dire.
M'enfin quoi, on parle dans votre dos.
      </span>
      <span
        class="from"
      >
        Fernand Naudin
      </span>
      <span
        class="message"
      >
        Et tu tiens ça d'où ?
      </span>
      <span
        class="from"
      >
        Pascal
      </span>
      <span
        class="message"
      >
        Je ne peux pas le dire, j'ai promis. Ce serait mal.
      </span>
      <span
        class="from"
      >
        Fernand Naudin
      </span>
      <span
        class="message"
      >
        Alors ?
      </span>
      <span
        class="from"
      >
        Maître Folage
      </span>
      <span
        class="message"
      >
        Eh bien. Euh. Y'a deux solutions : ou on se dérange, ou on méprise. 
Oui, évidemment, n'importe comment une tournée d'inspection peut jamais nuire, bien sûr.
      </span>
      <span
        class="from"
      >
        Fernand Naudin
      </span>
      <span
        class="message"
      >
        Bon, on va y aller, hmm ?
      </span>
      <span
        class="from"
      >
        Pascal
      </span>
      <span
        class="message"
      >
        Monsieur Fernand, y'a peut-être une place pour moi dans votre auto. Des fois que la réunion devienne houleuse ... J'ai une présence tranquillisante.
      </span>
    </div>
     
    <form>
      <fieldset>
         
        <input />
      </fieldset>
       
      <button
        disabled=""
        title="Envoyer à tous"
        type="submit"
      >
        <span
          class="material-icons"
        >
          send
        </span>
        
        
        
      </button>
    </form>
  </div>
</div>
`;

exports[`short thread 1`] = `
<div
  class="discussion"
>
  <div
    class="messages"
  >
    <span
      class="from"
    >
      Pascal
    </span>
    <span
      class="message"
    >
      Aww yeah!!
    </span>
  </div>
   
  <form>
    <fieldset>
       
      <input />
    </fieldset>
     
    <button
      disabled=""
      title="Envoyer à tous"
      type="submit"
    >
      <span
        class="material-icons"
      >
        send
      </span>
      
      
      
    </button>
  </form>
</div>
`;
